package core.management.jobApplication.domain;

public class File {
    
}
